📝 Fixing compatibility with Java 1.8